--- a/task1-perpage.html
+++ b/task1-perpage.html
@@ -19,7 +19,13 @@
     <li><strong>Favorite Book:</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. At illum facere molestias aliquid debitis, beatae quas dolorum, voluptatibus, consectetur odio omnis quidem adipisci et provident! Excepturi architecto aliquam vero ipsa! </li>
     <li><strong>Favorite Quote:</strong> <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt voluptate, laborum veritatis excepturi aspernatur corrupti. Nemo ducimus suscipit quo laborum distinctio, eos error tempore dicta animi consequuntur asperiores eius?</blockquote> </li>
     <li><strong>Favorite Song:</strong><a href="https://www.youtube.com/watch?v=VbaFJiWftwk" target="_blank"> Silent Planet- Panic Room</a></li>
-  </ul>
+    <li><strong>Domestic Pets:</strong> These are my domestic pets. Their names are Chicho Joro- cat, Mariika- donkey, Beri- rabbit, Chereshka- the black goat, Svetla- the whithe goat.</li>
+    </ul>
+    <img src="../images/perpage/kotka.JPG" alt="cat" width="200" height="180" title="cat">
+    <img src="../images/perpage/magare.JPG" alt="donkey" width="200" height="180" title="donkey">
+    <img src="../images/perpage/zaek.JPG" alt="rabbit" width="200" height="180" title="rabbit">
+    <img src="../images/perpage/koza1.JPG" alt="goat" width="200" height="180" title="goat">
+    <img src="../images/perpage/koza2.JPG" alt="goat" width="200" height="180" title="goat">
   </div>
   <div>
     <h2>What I expect from the Web Design Course?</h2>
