--- a/task2_CV.html
+++ b/task2_CV.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Mila Krasteva</h1>
+    <img src="../images/CV/DSC_1878.JPG" alt="my photo" width="150">
     <hr>
     <div>
     <h3>Summary</h3>
@@ -40,6 +41,17 @@
     <div>
 <h3>Contacts</h3>
 email: <a href="mailto:miladetelin@gmail.com" target="_blank">miladetelin@gmail.com</a>
+    </div>
+    <hr>
+    <div>
+<h3>Links</h3>
+Universities: <a href="https://www.lcca.org.uk/" target="_blank" title="University of Creative Arts">LCCA</a>,
+<a href="https://www.arts.ac.uk/" target="_blank" title="University of Arts in London">UAL</a><br>
+Schools: <a href="https://www.143ou.com/bg/" target="_blank" title="143 OU 'Georgi Benkovski'">143 OU</a>,
+<a href="https://parvamatematicheska.com/" target="_blank" title="Parva Chastna Matematicheska Gimnaziq">PCHMG</a><br>
+Companies: <a href="http://www.gss.bg/" target="_blank" title="Glabal System Solution">GSS</a>,
+<a href="https://www.facebook.com/%D0%A8%D0%B8%D0%B2%D0%B0%D1%88%D0%BA%D0%BE-%D0%B0%D1%82%D0%B5%D0%BB%D0%B8%D0%B5-%D0%9D%D0%B8%D0%BC%D0%B0%D1%80%D0%B8-468876599845741/" target="_blank" title="Facebook Page of Nimari">Nimari</a>,
+<a href="https://www.facebook.com/staratagospoja/" target="_blank" title="Facebook Page of Starata Gospoja">Starata Gospoja</a>
     </div>
 </body>
 </html>
